# DistributedWorkflows.jl

./: .gitignore  CMakeLists.txt  LICENSE  Project.toml  README.md  TODO.md  nodefile
.github/workflows/: CI.yml  Documentation.yml  codecov.yml  documentation.yml  draft-pdf.yml
dev/: .documenter-siteinfo.json  index.html  objects.inv
dev/Cluster/cluster/: index.html
dev/PetriNet/PetriNet/: index.html
dev/Scripting/scripting/: index.html
dev/Serialization/custom_serializer/: index.html
dev/api/: index.html
dev/application/: index.html
dev/examples/: index.html
dev/local_launch/: index.html
dev/troubleshooting/: index.html
docs/: CNAME  make.jl
docs/src/: api.md  application.md  index.md  local_launch.md
docs/src/PetriNet/: PetriNet.md
docs/src/Scripting/: scripting.md
docs/src/Serialization/: custom_serializer.md
examples/applications/: hello_julia.jl
examples/applications/multi_module/: create_test_files.jl  multi_module.jl
examples/executor_files/: execute_hello_julia.jl  execute_multi_module.jl  execute_parallel_reduce.jl
examples/other_serializers/hdf5/: application.jl  executor.jl  workflow.jl
examples/other_serializers/jld2/: application.jl  executor.jl  workflow.jl
examples/other_serializers/oscar_serializer/: application.jl  executor.jl  workflow.jl
examples/petri_nets/: hello_julia_net.jl  multi_module_net.jl  parallel_reduce_net.jl  sequential_sum.jl
examples/raw_data/: ran_matrix1_julia.jl  ran_matrix2_julia.jl
examples/serialized_data/: int1_julia_hdf5fmt  int1_julia_jld2fmt  int1_julia_nativefmt  int1_julia_oscarfmt  int2_julia_hdf5fmt  int2_julia_jld2fmt  int2_julia_nativefmt  int2_julia_oscarfmt  matrix1_julia_nativefmt  matrix2_julia_nativefmt
examples/slurm/hello_julia/: beehive_script.sh  execute_script.jl  launch.sh  launch_logger.sh
finding_julia/: CMakeLists.txt  finding_julia-config.cmake.in
finding_julia/cmake/modules/: FindJulia.cmake
paper/: header.tex  jlcode.sty  paper.bbl  paper.tex  paper.yml  ref.bib
src/: CMakeLists.txt  DistributedWorkflow.jl  DistributedWorkflows.jl  config.jl  cxxwrap_calls.jl  foo.jl  helpers.jl  init_calls.jl  jl_executor.jl  petri_net.jl  workflow_compiler.jl  workflow_renderer.jl  wrapper.jl  xml_generator.jl
src/jlflow/: CMakeLists.txt  Client.cpp  Client.hpp  KeyValuePair.cpp  KeyValuePair.hpp  Workflow.cpp  Workflow.hpp  WorkflowAdapter.cpp  WorkflowAdapter.hpp  interface.cpp  utility.cpp  utility.hpp
src/workflow/: CMakeLists.txt  compute_gcd.xpnet  executor.cpp  executor.hpp  hello_julia.xpnet  multi_module.xpnet  testing.xpnet
src/workflow/example_pnets/: one2three.xpnet  three2four.xpnet  two2one.xpnet
test/: config_tests.jl  foo_test.jl  mocked_functions.jl  petri_net.jl  runtests.jl  workflow.jl  wrapper.jl
utils/: executor.jl
v0.2.0/: .documenter-siteinfo.json  index.html  search_index.js
v0.2.0/Cluster/cluster/: index.html
v0.2.0/PetriNet/PetriNet/: index.html
v0.2.0/Scripting/scripting/: index.html
v0.2.0/Serialization/custom_serializer/: index.html
v0.2.0/api/: index.html
v0.2.0/application/: index.html
v0.2.0/examples/: index.html
v0.2.0/local_launch/: index.html
v0.2.0/troubleshooting/: index.html
